# bench-report

./: .hlint.yaml  .packcheck.ignore  README.md  bench-report.cabal  default.nix  flake.nix  hie.yaml  sources.nix
.github/workflows/: packcheck.yml
lib/: BenchReport.hs  BenchRunner.hs  BuildLib.hs  TestRunner.hs  Utils.hs
lib/Utils/: QuasiQuoter.hs
