cabal-version:      2.2
name:               bench-report
version:            0.0.0
synopsis:           Benchmark report generation
description: Benchmark reporting application is not included in the overall
  cabal project so that the dependencies of both can remain independent.
  Benchmark reporting has a lot of dependencies that usually lag behind
  when new GHC releases arrive.

common compile-options
    ghc-options:        -Weverything
                        -Wno-implicit-prelude
                        -Wno-prepositive-qualified-module
                        -Wno-missing-import-lists
                        -Wno-missing-safe-haskell-mode
                        -Wno-unsafe
                        -Wno-missing-deriving-strategies
                        -Wno-monomorphism-restriction
                        -Wno-missing-local-signatures
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
    default-extensions: TemplateHaskell
                      , QuasiQuotes
    default-language:   Haskell2010

library
    import:           compile-options
    exposed-modules:  Utils
                    , Utils.QuasiQuoter
    build-depends:    base ^>=4.14.3.0
                    , streamly
                    , streamly-shell
                    , streamly-process
                    , exceptions
                    , template-haskell
                    , filepath
    hs-source-dirs:   lib

executable bench-runner
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: bin
  main-is: BenchRunner.hs
  other-modules: BuildLib
  buildable: True
  build-Depends:
      base
    , bench-report
    , bench-show
    , streamly-coreutils
    , streamly
    , streamly-process
    , streamly-shell
    , filepath
    , csv
    , containers
    , transformers

executable bench-report
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: .
  main-is: BenchReport.hs
  buildable: True
  build-Depends:
      base >= 4.9 && < 4.17
    , bench-show >= 0.3.2 && < 0.4
    , transformers >= 0.4  && < 0.6
