cabal-version:      2.2
name:               bench-report
version:            0.0.0
synopsis:           Benchmark report generation
description: Benchmark reporting application is not included in the overall
  cabal project so that the dependencies of both can remain independent.
  Benchmark reporting has a lot of dependencies that usually lag behind
  when new GHC releases arrive.

flag no-charts
  description: Don't generate svg charts
  manual: True
  default: False

common compile-options
    ghc-options:        -Weverything
                        -Wno-implicit-prelude
                        -Wno-prepositive-qualified-module
                        -Wno-missing-import-lists
                        -Wno-missing-safe-haskell-mode
                        -Wno-unsafe
                        -Wno-missing-deriving-strategies
                        -Wno-monomorphism-restriction
                        -Wno-missing-local-signatures
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
    default-extensions: TemplateHaskell
                      , QuasiQuotes
    default-language:   Haskell2010

library
    import:           compile-options
    if flag(no-charts)
      cpp-options: -DNO_CHARTS
    exposed-modules:  Utils
                    , BenchRunner
                    , TestRunner
                    , BuildLib
                    , BenchReport
    build-depends:    base
                    , streamly
                    , streamly-shell
                    , streamly-process
                    , exceptions
                    , template-haskell
                    , filepath
                    , bench-show
                    , streamly-coreutils
                    , containers
                    , transformers
                    , directory
                    , optparse-applicative
                    , optparse-simple
    hs-source-dirs:   lib
