cabal-version:      2.2
name:               bench-report
version:            0.0.0
synopsis:           Benchmark report generation
description: Benchmark reporting application is not included in the overall
  cabal project so that the dependencies of both can remain independent.
  Benchmark reporting has a lot of dependencies that usually lag behind
  when new GHC releases arrive.

extra-doc-files:
    README.md

flag no-charts
  description: Don't generate svg charts
  manual: True
  default: False

common compile-options
    ghc-options:        -Weverything
                        -Wno-implicit-prelude
                        -Wno-prepositive-qualified-module
                        -Wno-missing-import-lists
                        -Wno-missing-safe-haskell-mode
                        -Wno-unsafe
                        -Wno-missing-deriving-strategies
                        -Wno-monomorphism-restriction
                        -Wno-missing-local-signatures
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
    default-extensions: TemplateHaskell
                      , QuasiQuotes
    default-language:   Haskell2010

library
    import:           compile-options
    if flag(no-charts)
      cpp-options: -DNO_CHARTS
    exposed-modules:  Utils
                    , BenchRunner
                    , TestRunner
                    , BuildLib
                    , BenchReport

    build-depends:    base                 >= 4.12   && < 4.22
                    , exceptions           >= 0.8.0  && < 0.11
                    , template-haskell     >= 2.14   && < 2.24
                    , filepath             >= 1.2    && < 1.6
                    , containers           >= 0.6.0  && < 0.9
                    , transformers         >= 0.2    && < 0.7
                    , directory            >= 1.2    && < 1.4
                    , optparse-applicative >= 0.14.2 && < 0.19
                    , optparse-simple      >= 0.1.0  && < 0.2

                    -- Managed Dependencies
                    , streamly-core        >= 0.1.0  && < 0.4
                    , streamly-process     >= 0.1    && < 0.5
                    , bench-show           == 0.3.2.*

                    -- The following dependencies are not released on
                    -- hackage. Make sure the env has appropriate versions of
                    -- these libs when importing bench-report
                    , streamly-shell
                    , streamly-coreutils

    hs-source-dirs:   lib
